# acp-bus

./: Cargo.toml  README.md
crates/acp-core/src/: adapter.rs  client.rs  store.rs  terminal.rs
crates/acp-core/tests/: client_integration.rs
crates/acp-protocol/src/: session.rs
crates/acp-tui/: Cargo.toml
crates/acp-tui/src/: app.rs  layout.rs
crates/acp-tui/src/components/: input.rs  messages.rs
docs/: roadmap.md
docs/superpowers/plans/: 2026-03-19-bus-comm-and-dispatch.md
docs/superpowers/specs/: 2026-03-19-bus-comm-and-dispatch-design.md
src/: main.rs
